# nicegui-examples

./: pyproject.toml
src/nicegui_examples/: main.py
src/nicegui_examples/elements/: buttons.py
src/nicegui_examples/widgets/: connection.py  led.py  led_control.py  main.py
