[project]
name = "nicegui-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.4.1",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']